Bug 162426 - Assertion is failed saving a specific document to HTML
Summary: Assertion is failed saving a specific document to HTML
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.1
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-11 08:19 UTC by Mike Kaganski
Modified: 2024-08-20 08:22 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
An image with style:wrap="none" (1.18 KB, application/vnd.oasis.opendocument.text)
2024-08-11 08:19 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-08-11 08:19:47 UTC
Created attachment 195798 [details]
An image with style:wrap="none"

Saving the attached document to HTML using a debug build fails an assertion.
Comment 1 Mike Kaganski 2024-08-11 09:04:50 UTC
https://gerrit.libreoffice.org/c/core/+/171722
Comment 2 Commit Notification 2024-08-11 13:18:38 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9555b793082db56ff5b61708bbbd4d4a088ccf4b

tdf#162426: make sure to only output new tags after all attributes were written

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-08-20 08:22:48 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/2d249e886a0eeab7d1309f2bd8e93174cfccd462

tdf#162426: make sure to only output new tags after all attributes were written

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.